assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Raleway&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-family: "Cabin", sans-serif;
    font-weight: 500;
    color: #2F5596;
}

body, html {
    height: 100%;
}

a {
    color: inherit;
    text-decoration: none;
}

hr {
    border-top: 3px solid #2F5596;
}

/* headings and logo */

h1, h2 {
    font-family: "Cabin", sans-serif;
    text-transform: capitalize;
    letter-spacing: 1px;
    color: #0b2838;
}

#logo {
    float: left;
    font-size: 280%;
    color: #2F5596;
    padding-left: 10px;
}

/* navigation links */

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    float: right;
}

#menu li {
    
    list-style-type: none;
    margin-right: 30px;
    display: inline;
}

#menu, #logo {
    line-height: 75px;
}

#menu a {
    text-decoration: none;
    color: #2F5596;
}

.active {
    border-bottom: 1px solid #8c0e0f;
}

/* hero-image-home */

.hero-image-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

#hero-image-home {
    height: 100%;
    width: 100%;
    background: url('../images/skyscrapers-1081737_1920.jpg');
      /* Create parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* text over image */

.cover-headlines-outer {
    width: 620px;
    height: 210px;
    border: 3px solid #8c0e0f;
    background-color: #e6eed6;
    border-radius: 25px;
    display: flex;
    position: absolute;
    justify-content: center;
    align-items: center;
}

.cover-headlines {

    font-size: 160%;
    font-family: "Cabin", sans-serif;
    text-transform: capitalize;
    letter-spacing: 4px;
    width: 600px;
    height: 200px;
    display: flex;
    position: absolute;
    justify-content: center;
    text-align: center;
    flex-direction: column;
}

/* main paragraphs on index.html */

.text-container {
    margin: 0 auto;
    width: 66.66%;
    padding-top: 50px;
    padding-bottom: 25px;
}

.text-container > h2 {
    margin-top: 20px;
    margin-bottom: 20px;
    text-transform: none;
    text-align: center;
    color: #0b2838;
    font-weight: 600;
    line-height: 2em;
}

.text-container > p {
    margin-top: 20px;
    margin-bottom: 20px;
    text-transform: none;
    text-align: center;
    color: #2F5596;
    font-family: "Raleway", sans-serif;
    font-weight: 300;
    font-size: 17px;
    line-height: 1.4em;
}

/* section-title on index.html */

.section-title > h2 {
    margin-top: 20px;
    margin-bottom: 20px;
    text-transform: capitalize;
    text-align: center;
    color: #8c0e0f;
    line-height: 1.4em;
    font-size: 200%;
    font-weight: 700;
}

/* about-us boxes on index.html */

#about-us {
    width: 80%;
    height: 375px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    color: white;
}

#centre-text {
    display: flex;
    align-items: center;
    margin: 0 auto;
}

i.fas {
    line-height: 100px;
}

#left-box {
    width: 33.33%;
    float: left;
    background-color: #0b2838;
    height: 375px;
    margin: 5px;
}

#left-box > h3 {
    font-size: 160%;
    font-weight: 600;
    line-height: 75px;
}

#left-box > p {
    margin: 20px;
    font-size: 18px;
    display: inline-block;
    line-height: normal;
    vertical-align: middle;
}

#right-box {
    width: 33.33%;
    float: right;
    background-color: #0b2838;
    height: 375px;
    margin: 5px;
}

#right-box > h3 {
    font-size: 160%;
    font-weight: 600;
    line-height: 75px;
}

#right-box > p {
    margin: 20px;
    font-size: 18px;
    display: inline-block;
    line-height: normal;
    vertical-align: middle;
}

#centre-box {
    width: 33.33%;
    background-color: #2F5596;
    height: 375px;
    margin: 5px;
}

#centre-box > h3 {
    font-size: 160%;
    font-weight: 600;
    line-height: 75px;
}

#centre-box > p {
    margin: 20px;
    font-size: 18px;
    display: inline-block;
    line-height: normal;
    vertical-align: middle;
}

/* past-projects gallery on index.html */

div.gallery {
    border: 1px solid #9F886B;
}
  
div.gallery:hover {
    border: 1px solid #0B2838;
}
  
div.gallery img {
    width: 100%;
    height: auto;
    padding: 5px;
}
  
div.desc {
    padding: 15px;
    text-align: center;
    font-size: 18px;
    font-family: "Raleway", sans-serif;
    color: #2F5596;
}
  

.responsive {
    display: flex;
    flex-wrap: wrap;
    padding: 5px, 5px;
    float: left;
    width: 24.99999%;
}
  
  @media only screen and (max-width: 700px) {
    .responsive {
      width: 49.99999%;
      margin: 6px 0;
    }
  }
  
  @media only screen and (max-width: 500px) {
    .responsive {
      width: 100%;
    }
  }
  
  .clearfix:after {
    content: "";
    display: table;
    clear: both;
  }
    

/* testimonials boxes on index.html */

#testimonials {
    width: 80%;
    height: 450px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    color: white;
}

#left-box-testimonial {
    width: 33.33%;
    float: left;
    background-color: #0b2838;
    height: 375px;
    margin: 5px;
}

#left-box-testimonial > h3 {
    font-size: 80%;
    font-weight: 600;
    line-height: 55px;
}

#left-box-testimonial > h4 {
    font-size: 80%;
    font-weight: 400;
}

#centre-box-testimonial {
    width: 33.33%;
    background-color: #2F5596;
    height: 375px;
    margin: 5px;
}

#centre-box-testimonial > h3 {
    font-size: 80%;
    font-weight: 600;
    line-height: 55px;
}

#centre-box-testimonial > h4 {
    font-size: 80%;
    font-weight: 400;
}

#right-box-testimonial {
    width: 33.33%;
    float: right;
    background-color: #0b2838;
    height: 375px;
    margin: 5px;
}
/* ... */

